syntax = "proto3";
package raftpb;


message LastVoted {
    string votedFor = 1;
    uint64 votedTerm = 2;
}

message RequestVoteReq {
    uint64 term = 1;
    uint64 lastLogIndex = 2;
    uint64 lastLogTerm = 3;
    string candidateID = 4;
}


message RequestVoteResp {
    uint64 term = 1;
    bool voteGranted = 2;
}

message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    bytes data = 3;
    enum LogType {
        LogCommand = 0;
        LogNoop = 1;
    }
    LogType logType = 4;
}

message AppendEntriesReq {
    uint64 term = 1;
    string leaderID = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    uint64 leaderCommitIndex = 6;
    repeated LogEntry entries = 5;
}

message AppendEntriesResp {
    uint64 term = 1;
    bool success = 2;
    uint64 lastLogIndex = 3;
}


service RaftService {
    rpc RequestVote (RequestVoteReq) returns (RequestVoteResp);
    rpc AppendEntries (AppendEntriesReq) returns (AppendEntriesResp);
}
